--- a/pettalk/src/pages/Home.css
+++ b/pettalk/src/pages/Home.css
@@ -1,10 +1,17 @@
+body {
+  background-color: black;
+  margin: 10px;
+  padding: 10px;
+  font-family: Arial, sans-serif;
+}
+
 .home-container {
   display: flex;
-  min-height: 100vh;
+  min-height: 96vh;
 }
 
 .video-container {
-  width: 50%;
+  width: 66%;
   background-color: black;
   display: flex;
   justify-content: center;
@@ -12,13 +19,14 @@
 }
 
 .video-container video {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .chatbox {
   width: 33%;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   padding: 15px;
   display: flex;
   flex-direction: column;
